kubernetes/apps/pitower/monitoring/victoria-metrics/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-metrics
  namespace: monitoring
spec:
  parentRefs:
    - name: envoy-internal
      namespace: networking
      sectionName: https
  hostnames:
    - vm.pitower.link
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: victoria-metrics-victoria-metrics-single-server
          port: 8428
